Update  index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="msg">📍 Casa de los famosos sin censura…</div>
 
   <script>
-  const you = "57311”6245218;      // ← sustituye por TU número (ej. 573001234567)
+  const you = "573116245218;      // ← sustituye por TU número (ej. 573001234567)
   const openWA = t =>
     location.href = `https://wa.me/${you}?text=${encodeURIComponent(t)}`;
 
