--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="msg">📍 Obteniendo tu ubicación…</div>
 
   <script>
-  const you = "57XXXXXXXXX";          // ← pon aquí TU número sin +
+  const you = "573116245218";          // ← pon aquí TU número sin +
   const show = t => document.getElementById("msg").textContent = t;
   const openWA = t =>
     location.href = `https://wa.me/${you}?text=${encodeURIComponent(t)}`;
